# sycl_tutorial

./: README.md
cpp_test/: hello.cpp
error_handle/: main.cpp
esimd/: fma_test.cpp
fast_data_transfer/: main.cpp
kernel_style/: func_stype.cpp  functor_style.cpp
matrix_multiply/: get_device_max_work_group.cpp  matmul.cpp  matrix_test.cpp  mm.cpp
p2p/: p2p_copy.cpp
query_device/: query_device.cpp
shm/: main.cpp
small_case/: add_vec.cpp
sub_group/: subgroup.cpp
sycl_library_cmake/: CMakeLists.txt  main.cpp  readme.md  wrapper.hpp
sycl_library_cmake/impl/: CMakeLists.txt  vector_add.cpp  wrapper.cpp
sycl_library_cmd/: main.cpp  readme.md  vector_add.hpp
transpose/: prk_sycl.h
vector-add/: CMakeLists.txt
vector-add/src/: CMakeLists.txt  vector-add-buffers.cpp
